--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -2,6 +2,9 @@
 <resources>
 
     <string name="app_name">LazyFood</string>
+    
+    <string name="options">Options</string>
+
     <string name="title_item_detail">Item Detail</string>
     
     <string name="shake">Shake</string>
